--- a/learnpython/.vscode/settings.json
+++ b/learnpython/.vscode/settings.json
@@ -5,5 +5,8 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "python.analysis.extraPaths": [
+        "./learnpython/type-ahead"
+    ]
 }
